@@ -11,6 +11,7 @@ import com.loopperfect.buckaroo.versioning.AnySemanticVersion;
 import org.junit.Assert;
 import org.junit.Test;
 
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.FileSystem;
 import java.nio.file.Files;
@@ -30,12 +31,12 @@ public final class InstallTasksTest {
 
         final Recipe valuable = Recipe.of(
             "Valuable",
-            "https://github.com/loopperfect/valuable",
+            new URI("https://github.com/loopperfect/valuable"),
             ImmutableMap.of(
                 SemanticVersion.of(0, 1),
                 RecipeVersion.of(
                     RemoteArchive.of(
-                        new URL("https://github.com/loopperfect/valuable/archive/da6f41cab53eed9a8ee490a1d2c11c091bce540d.zip"),
+                        new URI("https://github.com/loopperfect/valuable/archive/da6f41cab53eed9a8ee490a1d2c11c091bce540d.zip"),
                         HashCode.fromString("e65c42bdb93598727c0a6b965b5797a2e39ead076219daf737a4169d6ca560b7"),
                         "valuable-da6f41cab53eed9a8ee490a1d2c11c091bce540d"))));
 
@@ -77,7 +78,7 @@ public final class InstallTasksTest {
         assertTrue(Files.exists(dependencyFolder.resolve("BUCK")));
         assertTrue(Files.exists(dependencyFolder.resolve("BUCKAROO_DEPS")));
 
-        TestUtils.printTree(fs.getPath("/"));
+//        TestUtils.printTree(fs.getPath("/"));
 
         assertTrue(!Files.exists(dependencyFolder.getParent().resolve("valuable.zip")));
     }
@@ -156,23 +157,23 @@ public final class InstallTasksTest {
         // Write the recipe files
         final Recipe valuable = Recipe.of(
             "Valuable",
-            "https://github.com/loopperfect/valuable",
+            new URI("https://github.com/loopperfect/valuable"),
             ImmutableMap.of(
                 SemanticVersion.of(0, 1),
                 RecipeVersion.of(
                     RemoteArchive.of(
-                        new URL("https://github.com/loopperfect/valuable/archive/da6f41cab53eed9a8ee490a1d2c11c091bce540d.zip"),
+                        new URI("https://github.com/loopperfect/valuable/archive/da6f41cab53eed9a8ee490a1d2c11c091bce540d.zip"),
                         HashCode.fromString("e65c42bdb93598727c0a6b965b5797a2e39ead076219daf737a4169d6ca560b7"),
                         "valuable-da6f41cab53eed9a8ee490a1d2c11c091bce540d"))));
 
         final Recipe neither = Recipe.of(
             "Neither",
-            "https://github.com/loopperfect/neither",
+            new URI("https://github.com/loopperfect/neither"),
             ImmutableMap.of(
                 SemanticVersion.of(0, 1),
                 RecipeVersion.of(
                     RemoteArchive.of(
-                        new URL("https://github.com/loopperfect/neither/archive/c313b3ce65249b2dfc3f7820e7ed4873111d2fe8.zip"),
+                        new URI("https://github.com/loopperfect/neither/archive/c313b3ce65249b2dfc3f7820e7ed4873111d2fe8.zip"),
                         HashCode.fromString("fe58cd55cd9177abc1ffe9550091b678ad265e5ead40305a53d5c55e562a9b68"),
                         "neither-c313b3ce65249b2dfc3f7820e7ed4873111d2fe8"))));
 
@@ -239,12 +240,12 @@ public final class InstallTasksTest {
 
         final Recipe recipe = Recipe.of(
             "Valuable",
-            "http://www.example.com",
+            new URI("http://www.example.com"),
             ImmutableMap.of(
                 SemanticVersion.of(1),
                 RecipeVersion.of(
                     RemoteArchive.of(
-                        new URL("https://github.com/LoopPerfect/valuable/archive/v0.1.0.zip"),
+                        new URI("https://github.com/LoopPerfect/valuable/archive/v0.1.0.zip"),
                         HashCode.fromString("aaaaaaaaaaaaaaaaaaaaaaa71dd4a1fd3400f1d04b84954beb2f514ec69934c0"),
                         "valuable-0.1.0"))));
 
